--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "transpile": "ngc",
     "package": "./node_modules/.bin/rollup -c",
-    "build": "npm run transpile && npm run package",
-    "publish": "npm run build and npm run publish"
+    "build": "npm run transpile && npm run package"
   },
   "repository": {
     "type": "git",
