--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,34 @@
-# .idea
-# Node generated files
-node_modules
+# Node
+node_modules/*
 npm-debug.log
-# OS generated files
+docs/*
+# DO NOT IGNORE TYPESCRIPT FILES FOR NPM
+# TypeScript
+# *.js
+# *.map
+# *.d.ts
+
+# JetBrains
+.idea
+.project
+.settings
+.idea/*
+*.iml
+
+# VS Code
+.vscode/*
+
+# Windows
 Thumbs.db
+Desktop.ini
+
+# Mac
 .DS_Store
-# Ignored files
-!*.ts
-!*.d.ts
+**/.DS_Store
+
+# Ngc generated files
+**/*.ngfactory.ts
+
+# Library files
+src/*
+build/*
