--- a/package.json
+++ b/package.json
@@ -1,46 +1,81 @@
 {
   "name": "ng-masonry-grid",
-  "version": "0.0.4",
+  "version": "0.1.1",
   "description": "Angular 4+ masonry grid component with CSS3 animations on scroll.",
-  "main": "index.ts",
   "scripts": {
-    "transpile": "ngc",
-    "package": "./node_modules/.bin/rollup -c",
-    "build": "npm run transpile && npm run package"
+    "build": "gulp build",
+    "build:watch": "gulp",
+    "docs": "npm run docs:build",
+    "docs:build": "compodoc -p tsconfig.json -n ng-masonry-grid -d docs --hideGenerator",
+    "docs:serve": "npm run docs:build -- -s",
+    "docs:watch": "npm run docs:build -- -s -w",
+    "lint": "tslint --type-check --project tsconfig.json src/**/*.ts",
+    "start": "ng serve --port 4201",
+    "demo": "concurrently \"npm run build:watch\" \"npm run start\"",
+    "test": "tsc && karma start"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Shailu4u/masonry-grid.git"
+    "url": "https://github.com/Shailu4u/ng-masonry-grid.git"
+  },
+  "author": {
+    "name": "Shailendra Kumar",
+    "email": "shailu.snist@gmail.com"
   },
   "keywords": [
-    "Masonry",
-    "grid",
-    "Angular 4 masonry grid",
-    "grid animations",
-    "ng2 masonry",
-    "ng masonry",
-    "ng2 masonry grid"
+    "angular"
   ],
-  "author": "Shailendra Kumar <shailu.snist@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Shailu4u/masonry-grid/issues"
-  },
-  "homepage": "https://github.com/Shailu4u/masonry-grid#readme",
-  "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "core-js": "^2.4.1",
-    "desandro-classie": "^1.0.1",
-    "masonry-layout": "^4.2.1",
-    "zone.js": "^0.8.14"
+    "url": "https://github.com/Shailu4u/ng-masonry-grid.git/issues"
   },
   "devDependencies": {
+    "@angular/cli": "^1.6.3",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
     "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
-    "rollup": "^0.53.3",
-    "typescript": "~2.6.2"
+    "@angular/core": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.1.3",
+    "@compodoc/compodoc": "^1.0.0-beta.10",
+    "@types/jasmine": "2.5.53",
+    "@types/node": "~6.0.60",
+    "angular-in-memory-web-api": "^0.3.2",
+    "codelyzer": "~3.2.0",
+    "concurrently": "^3.4.0",
+    "core-js": "^2.4.1",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-rollup": "^2.15.0",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "lite-server": "^2.3.0",
+    "node-sass": "^4.5.2",
+    "node-sass-tilde-importer": "^1.0.0",
+    "node-watch": "^0.5.2",
+    "protractor": "~5.1.2",
+    "rollup": "^0.49.3",
+    "run-sequence": "^1.2.2",
+    "rxjs": "^5.5.2",
+    "systemjs": "^0.20.12",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.7.0",
+    "typescript": "~2.4.2",
+    "zone.js": "^0.8.14"
+  },
+  "engines": {
+    "node": ">=6.0.0"
+  },
+  "dependencies": {
+    "desandro-classie": "^1.0.1",
+    "masonry-layout": "^4.2.1"
   }
 }
