--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,42 +1,14 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "declaration": true,
-    "stripInternal": true,
-    "emitDecoratorMetadata": true,
+    "baseUrl": "./src",
     "experimentalDecorators": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "module": "es2015",
     "moduleResolution": "node",
-    "paths": {
-      "@angular/core": ["node_modules/@angular/core"],
-      "@angular/common": ["node_modules/@angular/common"],
-      "masonry-layout": ["node_modules/masonry-layout"],
-      "desandro-classie": ["node_modules/desandro-classie"]
-    },
-    "rootDir": ".",
-    "outDir": "dist",
-    "sourceMap": true,
-    "inlineSources": true,
-    "target": "es5",
+    "rootDir": "./src",
+    "lib": [
+      "es2015",
+      "dom"
+    ],
     "skipLibCheck": true,
-    "lib": ["es2015", "dom"],
-    "typeRoots": [
-      "node_modules/@types"
-    ]
-  },
-  "files": [
-    "index.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "typings/main",
-    "typings/main.d.ts"
-  ],
-  "angularCompilerOptions": {
-    "strictMetadataEmit": false,
-    "skipTemplateCodegen": true,
-    "genDir": ".tmp"
+    "types": []
   }
 }
