--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
   "name": "ng-masonry-grid",
   "version": "0.1.1",
-  "description": "Angular 4+ masonry grid component with CSS3 animations on scroll.",
+  "description": "Angular 2+ masonry grid component with CSS3 animations on scroll.",
   "scripts": {
     "build": "gulp build",
     "build:watch": "gulp",
-    "docs": "npm run docs:build",
-    "docs:build": "compodoc -p tsconfig.json -n ng-masonry-grid -d docs --hideGenerator",
-    "docs:serve": "npm run docs:build -- -s",
-    "docs:watch": "npm run docs:build -- -s -w",
-    "lint": "tslint --type-check --project tsconfig.json src/**/*.ts",
     "start": "ng serve --port 4201",
-    "demo": "concurrently \"npm run build:watch\" \"npm run start\"",
-    "test": "tsc && karma start"
+    "demo": "concurrently \"npm run build\" \"npm run start\""
   },
   "repository": {
     "type": "git",
@@ -38,7 +32,6 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.1.3",
-    "@compodoc/compodoc": "^1.0.0-beta.10",
     "@types/jasmine": "2.5.53",
     "@types/node": "~6.0.60",
     "angular-in-memory-web-api": "^0.3.2",
