--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-masonry-grid",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "Angular 4+ masonry grid component with CSS3 animations on scroll.",
   "repository": {
     "type": "git",
@@ -12,8 +12,10 @@
   },
   "keywords": [
     "Masonry",
-    "grid",
-    "Angular 4 masonry grid",
+    "masonry layout",
+    "grid layout",
+    "angular 4 masonry grid",
+    "angular 4 layout",
     "grid animations",
     "ng2 masonry",
     "ng masonry",
@@ -24,7 +26,7 @@
     "url": "https://github.com/Shailu4u/ng-masonry-grid.git/issues"
   },
   "main": "ng-masonry-grid.umd.js",
-  "module": "ng-masonry-grid.js",
+  "module": "ng-masonry-grid.module.js",
   "jsnext:main": "ng-masonry-grid.js",
   "typings": "ng-masonry-grid.d.ts",
   "peerDependencies": {
