--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "dependencies": {
     "desandro-classie": "^1.0.1",
+    "imagesloaded": "^4.1.4",
     "masonry-layout": "^4.2.1"
   }
 }
