--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-masonry-grid",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Angular 2+ masonry grid component with CSS3 animations on scroll.",
   "repository": {
     "type": "git",
@@ -33,9 +33,7 @@
     "@angular/core": "^5.0.0",
     "@angular/common": "^5.0.0",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
-  },
-  "dependencies": {
+    "zone.js": "^0.8.4",
     "desandro-classie": "^1.0.1",
     "imagesloaded": "^4.1.4",
     "masonry-layout": "^4.2.1"
