--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "build": "gulp build",
     "build:watch": "gulp",
-    "start": "ng serve --port 4201",
-    "demo": "concurrently \"npm run build\" \"npm run start\""
+    "demo": "ng serve --port 4201"
   },
   "repository": {
     "type": "git",
