--- a/package.json
+++ b/package.json
@@ -65,8 +65,10 @@
     "node": ">=6.0.0"
   },
   "dependencies": {
+    "classlist.js": "^1.1.20150312",
     "desandro-classie": "^1.0.1",
     "imagesloaded": "^4.1.4",
-    "masonry-layout": "^4.2.1"
+    "masonry-layout": "^4.2.1",
+    "web-animations-js": "^2.3.1"
   }
 }
