--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
+    "@angular/core": "^5.2.10",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.1.3",
@@ -73,7 +73,12 @@
     "node": ">=6.0.0"
   },
   "dependencies": {
+    "@angular/animations": "^5.0.0",
+    "@angular/cdk": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/material": "^5.0.0",
     "classlist.js": "^1.1.20150312",
+    "hammerjs": "^2.0.8",
     "imagesloaded": "^4.1.4",
     "masonry-layout": "^4.2.1",
     "web-animations-js": "^2.3.1"
