--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ng-masonry-grid",
-  "version": "1.2.5",
-  "description": "Angular 2+ masonry grid component with CSS3 animations on scroll.",
+  "version": "1.3.0",
+  "description": "Angular 6+ masonry grid component with CSS3 animations on scroll.",
   "scripts": {
     "build": "gulp build",
     "build:watch": "gulp",
@@ -16,6 +16,7 @@
     "email": "shailu.snist@gmail.com"
   },
   "keywords": [
+    "angular 6 masonry",
     "angular2-masonry",
     "masonry",
     "masonry layout",
@@ -31,14 +32,15 @@
     "url": "https://github.com/Shailu4u/ng-masonry-grid.git/issues"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.5",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.2.10",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.1.3",
+    "@angular-devkit/build-angular": "~0.7.0",
+    "@angular/cli": "6.1.5",
+    "@angular/common": "6.1.7",
+    "@angular/compiler": "6.1.7",
+    "@angular/compiler-cli": "6.1.7",
+    "@angular/core": "6.1.7",
+    "@angular/platform-browser": "6.1.7",
+    "@angular/platform-browser-dynamic": "6.1.7",
+    "@angular/router": "6.1.7",
     "@types/jasmine": "2.5.53",
     "@types/node": "~6.0.60",
     "angular-in-memory-web-api": "^0.3.2",
@@ -59,24 +61,25 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "node-sass": "^4.5.2",
     "node-sass-tilde-importer": "^1.0.0",
-    "protractor": "~5.1.2",
-    "rollup": "^0.49.3",
-    "run-sequence": "^1.2.2",
-    "rxjs": "^5.5.2",
-    "systemjs": "^0.20.12",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2",
-    "zone.js": "^0.8.14"
+    "protractor": "~5.4.0",
+    "rollup": "^0.65.2",
+    "run-sequence": "^2.2.1",
+    "rxjs": "^6.3.2",
+    "rxjs-compat": "^6.3.2",
+    "systemjs": "^0.21.4",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.11.0",
+    "typescript": "2.9.2",
+    "zone.js": "^0.8.26"
   },
   "engines": {
     "node": ">=6.0.0"
   },
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/cdk": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/material": "^5.0.0",
+    "@angular/animations": "6.1.7",
+    "@angular/cdk": "^5.2.5",
+    "@angular/forms": "6.1.7",
+    "@angular/material": "^5.2.5",
     "classlist.js": "^1.1.20150312",
     "hammerjs": "^2.0.8",
     "imagesloaded": "^4.1.4",
